[package]
name        = "cfnts"
version     = "2019.6.0"
authors = [
    "Watson Ladd <watson@cloudflare.com>",
    "Gabbi Fisher <gabbi@cloudflare.com>",
    "Tanya Verma <tverma@cloudflare.com>",
    "Suphanat Chunhapanya <pop@cloudflare.com>",
]
edition     = "2018"

[dependencies]

byteorder   = "1.3.2"
libc        = "0.2.65"
log         = "0.4.8"
miscreant   = "0.4.2"
rand        = "0.7.2"
ring        = "0.16.9"
rustls      = "0.16.0"
webpki      = "0.21.0"
webpki-roots = "0.18.0"
