[package]
name        = "cfnts"
version     = "2019.6.0"
authors = [
    "Watson Ladd <watson@cloudflare.com>",
    "Gabbi Fisher <gabbi@cloudflare.com>",
    "Tanya Verma <tverma@cloudflare.com>",
    "Suphanat Chunhapanya <pop@cloudflare.com>",
]
edition     = "2018"

[dependencies]
byteorder   = "1.3.2"
libc        = "0.2.65"
log         = "0.4.8"
aes-siv     = "0.7.0"
rand        = "0.8.5"
ring        = "0.17.7"
rustls      = "0.22.2"
webpki      = "0.22.4"
webpki-roots = "0.26.0"

[dev-dependencies]
env_logger = "*"
