[package]
name = "phala-nts"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
anyhow = "1"
byteorder = "1.3.2"
libc = "0.2.65"
log = "0.4.8"
aes-siv = "0.7.0"
rand = "0.8.5"
ring = "0.17.7"
rustls = "0.22.2"
webpki = "0.22.4"
webpki-roots = "0.26.0"
tokio = { version = "1.10.1", features = ["full"] }
tokio-rustls = "0.25"
trust-dns-resolver = { version = "0.23.2", features = ["tokio"] }
